--- a/menu_hamburguer.html
+++ b/menu_hamburguer.html
@@ -14,9 +14,9 @@
         <img id="content-menu" src="./images/Menu_White.png" alt=""/>
     </span>
   </section>
-  <section id="box-menu-open" class="box-hidden">
+  <section id="box-menu-open" class="box-initial-hidden">
     <div id="box-close-menu">
-      <img onclick="menuToogle()" id="image-close" src="./images/Component 1.png" alt="">
+      <img onclick="closeMenu()" id="image-close" src="./images/Component 1.png" alt="">
     </div>
     <ul id="menu-list">
       <li class="menu-item"><a href="/">Work</a></li>
